giving credits to the original project

--- a/public/index.html
+++ b/public/index.html
@@ -42,4 +42,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <footer> <link href="https://github.com/john-smilga/react-phone-e-commerce-project"> Project based on John Smilga Tutorial</link> </footer>
 </html>
